RESOLVED FIXED173717
Fix memory leak in LibWebRTCMediaEndpoint
https://bugs.webkit.org/show_bug.cgi?id=173717
Summary Fix memory leak in LibWebRTCMediaEndpoint
youenn fablet
Reported 2017-06-22 09:05:35 PDT
LibWebRTC is passing offer/answer structure ownership to WebCore.
Attachments
Patch (3.43 KB, patch)
2017-06-22 09:07 PDT, youenn fablet
no flags
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 (2.02 MB, application/zip)
2017-06-22 11:51 PDT, Build Bot
no flags
Fixing mock (4.43 KB, patch)
2017-06-22 12:13 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-06-22 09:07:00 PDT
youenn fablet
Comment 2 2017-06-22 09:08:09 PDT
Build Bot
Comment 3 2017-06-22 11:51:11 PDT
Comment on attachment 313634 [details] Patch Attachment 313634 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3979040 New failing tests: fast/mediastream/RTCPeerConnection-setRemoteDescription-offer.html fast/mediastream/RTCPeerConnection-remotely-assigned-transceiver-mid.html fast/mediastream/RTCPeerConnection-inspect-offer.html fast/mediastream/RTCPeerConnection-media-setup-two-dialogs.html fast/mediastream/RTCPeerConnection-inspect-answer.html fast/mediastream/RTCPeerConnection-media-setup-single-dialog.html fast/mediastream/RTCPeerConnection-setLocalDescription-offer.html fast/mediastream/RTCPeerConnection-icecandidate-event.html webrtc/libwebrtc/release-while-setting-local-description.html fast/mediastream/RTCPeerConnection-legacy-stream-based-api.html
Build Bot
Comment 4 2017-06-22 11:51:13 PDT
Created attachment 313647 [details] Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
youenn fablet
Comment 5 2017-06-22 12:13:35 PDT
Created attachment 313648 [details] Fixing mock
WebKit Commit Bot
Comment 6 2017-06-22 12:54:09 PDT
Comment on attachment 313648 [details] Fixing mock Clearing flags on attachment: 313648 Committed r218714: <http://trac.webkit.org/changeset/218714>
WebKit Commit Bot
Comment 7 2017-06-22 12:54:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.