Fix memory leak in LibWebRTCMediaEndpoint https://bugs.webkit.org/show_bug.cgi?id=173717

Patch by Youenn Fablet <youenn@apple.com> on 2017-06-22
Reviewed by Eric Carlson.

No chnage of behavior.
Making sure SessionDescription pointer get properly released.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::createSessionDescriptionSucceeded):
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* testing/MockLibWebRTCPeerConnection.cpp: Allocating description.

Canonical link: https://commits.webkit.org/190597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218714 268f45cc-cd09-0410-ab3c-d52691b4dbfc